[package]
name = "tun_test"
version = "0.1.0"
authors = ["Zhiyuan Wang <wzypublic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1"
#packet = "0.1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winreg", "std", "fileapi", "ioapiset", "winerror", "winioctl", "winbase", "errhandlingapi", "handleapi", "synchapi"] }
